--- a/Assessment3/UI/Base.lproj/Main.storyboard
+++ b/Assessment3/UI/Base.lproj/Main.storyboard
@@ -9,18 +9,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Movie Table View Controller-->
         <scene sceneID="ZG9-Qx-ytx">
             <objects>
-                <tableViewController id="jLc-H0-nBO" sceneMemberID="viewController">
+                <tableViewController id="jLc-H0-nBO" customClass="MovieTableViewController" customModule="Assessment3" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="N8I-hh-iId">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" id="i0V-hR-E33">
+                        <searchBar key="tableHeaderView" contentMode="redraw" text="Search..." id="cWA-7b-tjQ">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="jLc-H0-nBO" id="uFw-NB-Lq6"/>
+                            </connections>
                         </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="236" id="bPb-mi-tCW" customClass="MovieTableViewCell" customModule="Assessment3" customModuleProvider="target">
@@ -33,18 +36,19 @@
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YGd-Hp-5bk">
                                             <rect key="frame" x="28" y="19" width="132.5" height="198"/>
                                             <constraints>
+                                                <constraint firstAttribute="height" constant="198" id="bxU-0R-sRl"/>
                                                 <constraint firstAttribute="width" secondItem="YGd-Hp-5bk" secondAttribute="height" multiplier="103:154" id="uV8-el-DjF"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(title)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkM-YR-tyD">
-                                            <rect key="frame" x="168" y="19" width="53" height="24"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(title)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="4" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BkM-YR-tyD">
+                                            <rect key="frame" x="168" y="11" width="209" height="32"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(rating)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OqT-YR-0qF">
-                                            <rect key="frame" x="168" y="48" width="64" height="22"/>
+                                            <rect key="frame" x="168" y="48" width="65" height="22"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                             <nil key="textColor"/>
@@ -77,6 +81,9 @@
                             <outlet property="delegate" destination="jLc-H0-nBO" id="SFR-Tw-WIr"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="searchBar" destination="cWA-7b-tjQ" id="Cit-3X-qdK"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="asN-nv-LTC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
